--- a/car-hire-webpage.html
+++ b/car-hire-webpage.html
@@ -8,9 +8,9 @@
         <h2>Great offers for cheap car rental, daily, weekly long term rentals. Find the cheapest prices online, for your future Car Hire in 4 quick easy steps. Book now at the lowest possible rates and see how much you can save!</h2>
     </body>
 </html>
-What do I get?
+<h3>what do I get?</h3>
 Our mission is to help people pick the right car hire. Before you book, we will show you everything you need to know. From past customer ratings, what's included and pick-up information, we give you all the facts, so that you can make the right car hire choice for you.
-Exclusive Lowest Prices!
+<h4>Exclusive Lowest Prices!</h4>
 We have access to exclusive lowest prices and free add-ons. Our smart booking search engine will ensure that we pass those savings on to you! We will show you the best and cheapest price for your rental requirements to help you find your ideal car.
-Local Expertise!
-We believe everyone should have a memorable and enjoyable experience with their car rental. For that reason we have selected suppliers that are friendly and helpful, reputable and have in-depth local knowledge to ensure you get the best out of your rental.
+<p>ocal Expertise!
+We believe everyone should have a memorable and enjoyable experience with their car rental. For that reason we have selected suppliers that are friendly and helpful, reputable and have in-depth local knowledge to ensure you get the best out of your rental.</p>
