add list elements

--- a/car-hire-webpage.html
+++ b/car-hire-webpage.html
@@ -14,3 +14,12 @@ Our mission is to help people pick the right car hire. Before you book, we will 
 We have access to exclusive lowest prices and free add-ons. Our smart booking search engine will ensure that we pass those savings on to you! We will show you the best and cheapest price for your rental requirements to help you find your ideal car.
 <p>ocal Expertise!
 We believe everyone should have a memorable and enjoyable experience with their car rental. For that reason we have selected suppliers that are friendly and helpful, reputable and have in-depth local knowledge to ensure you get the best out of your rental.</p>
+<p>Here are some car specifications we offer</p>
+<ol>
+    <li>Automatic cars</li>
+    <li>Manual cars</li>
+    <li>2 to 9 seater cars</li>
+    <li>luxury and prestige cars</li>
+</ol>
+</body>
+</html>
