--- a/car-hire-webpage.html
+++ b/car-hire-webpage.html
@@ -6,20 +6,20 @@
     <body>
         <h1>Find Great Deals for Car Hire</h1>
         <h2>Great offers for cheap car rental, daily, weekly long term rentals. Find the cheapest prices online, for your future Car Hire in 4 quick easy steps. Book now at the lowest possible rates and see how much you can save!</h2>
-    </body>
-</html>
+        <img src="images/dodge.jpg" alt="Dodge challenger">
 <h3>what do I get?</h3>
 Our mission is to help people pick the right car hire. Before you book, we will show you everything you need to know. From past customer ratings, what's included and pick-up information, we give you all the facts, so that you can make the right car hire choice for you.
 <h4>Exclusive Lowest Prices!</h4>
 We have access to exclusive lowest prices and free add-ons. Our smart booking search engine will ensure that we pass those savings on to you! We will show you the best and cheapest price for your rental requirements to help you find your ideal car.
-<p>ocal Expertise!
+<p><em>local Expertise!</em>
 We believe everyone should have a memorable and enjoyable experience with their car rental. For that reason we have selected suppliers that are friendly and helpful, reputable and have in-depth local knowledge to ensure you get the best out of your rental.</p>
-<p>Here are some car specifications we offer</p>
+<p><strong>Here are some car specifications we offer</strong>!</p>
 <ol>
     <li>Automatic cars</li>
     <li>Manual cars</li>
     <li>2 to 9 seater cars</li>
     <li>luxury and prestige cars</li>
 </ol>
+<p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
 </body>
 </html>
