--- a/car-hire-webpage.html
+++ b/car-hire-webpage.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Car hire!</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Find Great Deals for Car Hire</h1>
@@ -9,7 +10,7 @@
         <img src="images/dodge.jpg" alt="Dodge challenger">
 <h3>what do I get?</h3>
 Our mission is to help people pick the right car hire. Before you book, we will show you everything you need to know. From past customer ratings, what's included and pick-up information, we give you all the facts, so that you can make the right car hire choice for you.
-<h4>Exclusive Lowest Prices!</h4>
+<h4>Exclusive Lowest Prices</h4>
 We have access to exclusive lowest prices and free add-ons. Our smart booking search engine will ensure that we pass those savings on to you! We will show you the best and cheapest price for your rental requirements to help you find your ideal car.
 <p><em>local Expertise!</em>
 We believe everyone should have a memorable and enjoyable experience with their car rental. For that reason we have selected suppliers that are friendly and helpful, reputable and have in-depth local knowledge to ensure you get the best out of your rental.</p>
@@ -20,6 +21,6 @@ We believe everyone should have a memorable and enjoyable experience with their 
     <li>2 to 9 seater cars</li>
     <li>luxury and prestige cars</li>
 </ol>
-<p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+<p>Check out <a href="http://toyota.com/">Toyota kenya</a>. It's a great place to checkout different types of cars</p>
 </body>
 </html>
