create css links

--- a/car-hire-webpage.html
+++ b/car-hire-webpage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link rel="stylesheet" href="styles.css">
         <title>Car hire!</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Find Great Deals for Car Hire</h1>
