--- a/car-hire-webpage.html
+++ b/car-hire-webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <link rel="stylesheet" href="styles.css">
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <title>Car hire!</title>
     </head>
     <body>
